--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -20,6 +16,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.wrapper {
+  display: flex;
 }
 
 @keyframes App-logo-spin {
